# Erkenly

./: CMakeLists.txt  dashboardView.cpp  dashboardView.h  lotOverview.cpp  lotOverview.h  mapview.cpp  mapview.h
app/: AppController.cpp  AppController.h
domain/: CMakeLists.txt  ParkingLot.cpp  ParkingLot.hpp  ParkingModel.cpp  ParkingModel.hpp  ParkingSpot.cpp  ParkingSpot.hpp
domain/include/: Gate.hpp  ParkingLot.hpp  ParkingModel.hpp
domain/src/: Gate.cpp  ParkingLot.cpp  ParkingModel.cpp
networking/: ParkingClient.cpp  ParkingClient.h
networking/client/: folder files.txt
networking/server/: folder files.txt
server/: CMakeLists.txt  data.json  main.cpp
server/build-mingw/: CMakeCache.txt  Makefile
ui/: lotOverview.cpp  lotOverview.h  lotoverview.cpp  lotoverview.h  mainwindow.cpp  mainwindow.h  mapview.cpp  mapview.h
